# sistema-180

./: .gitignore  AGENTE 180  CLAUDE.md  CURRENT_STATE.md  DECISION_LOG.md  PLAN_MAESTRO.md  PROMPT_MAESTRO.md  Procfile  README.md  clone.js  css-diff.txt  faceswap.mjs  generate_profile_instantid.mjs  getSchema.mjs  index.html  landing-it.html  package-lock.json  package.json  railway.json  requirements.txt  result.json  search_replicate.mjs  temp-css.css  temp-key.js  vite.config.js
meta-ads-bot/ghost-mouse/: .env.example  .gitignore  README.md  _check_all.py  _check_crm.py  _find_models.py  _response.json  _response.txt  _tmp.py  ai_smart_campaign.py  brain.py  browser_manager.py  buy_number.py  catalogo_precios.py  cold_email_engine.py  comfy_biblia.txt  comfy_orchestrator.py  config.py  content_generator.py  create_ig_account.py  crm.py  dm_sender.py  email_crm.py  email_enricher.py  email_marketing.py  email_scraper_massive.py  emails_leads.json  emails_leads_massive.json  fire_day1.py  followup_scheduler.py  generate_photos.py  ghost_bot.py  ghost_mouse.py  gmaps_ghost_scraper.py  gmaps_mega_scanner.py  human_cursor.py  ig_automator.py  launch_campaign.py  lead_finder.py  leads.json  (+34 more)
meta-ads-bot/ghost-mouse/agents/: agent_framework.py  content_pipeline.py  cristina_reports.py  miguel_onboarding.py  sergio_ads.py
meta-ads-bot/ghost-mouse/app/: __init__.py  autopilot.py  cli.py  server.py
meta-ads-bot/ghost-mouse/dashboard/: app.js  index.html  style.css
meta-ads-bot/ghost-mouse/generated_photos_v2/: debug_martadiaz.24_story.png.json
(+2704 files in other folders)
