[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-mouse"
version = "2.0.0"
description = "Sistema 180 Ghost Mouse — B2B Prospecting Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy>=2.0,<3",
    "typer[all]>=0.9,<1",
    "rich>=13.0,<14",
    "structlog>=23.0",
    "httpx>=0.25",
    "rapidfuzz>=3.5",
    "phonenumbers>=8.13",
    "email-validator>=2.1",
    "tldextract>=5.0",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
scraping = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]
llm = [
    "openai>=1.6",
    "google-generativeai>=0.3",
]

[project.scripts]
ghostmouse = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
